Add website files

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     Qurvix is the official AI project under development by Villatrix.  
     It's designed to be the heart of our future smart systems, with advanced machine learning and decision logic.
   </p>
-  <img src="https://i.postimg.cc/Kj4dS4gP/image.png" alt="Qurvix AI" class="qurvix-image">
+  <img src="https://i.postimg.cc/tgjZRgsM/image.png" alt="Qurvix AI" class="qurvix-image">
   <p>
     This is the official concept image of Qurvix.  
     It is still evolving – and very soon, it will become a real working AI.
