Add website files

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="yiQrh9UD0yy3YwfJRjP1aD2-wa_YquNFLkoThShXPG8" />
   <meta charset="UTF-8">
   <title>Villatrix – Egyptian Tech Company</title>
   <style>
