--- a/copyright.html
+++ b/copyright.html
@@ -53,7 +53,8 @@
     <p>This project is part of an independent Egyptian tech startup and does not rely on any international assistance.</p>
   </div>
 
-  <a href="VILLTRIX.html">← Back to Home</a>
+  <a href="index.html">← Back to Home</a>
 
 </body>
 </html>
+
