--- a/rights.html
+++ b/rights.html
@@ -69,8 +69,9 @@
 
 <p>&copy; 2025 Villatrix. All rights reserved.</p>
 <p>
-    <a href="VILLTRIX.html">← Back to Home</a>
+    <a href="index.html">← Back to Home</a>
 </p>
 
 </body>
 </html>
+
