--- a/contact.html
+++ b/contact.html
@@ -35,5 +35,7 @@
       document.getElementById("status").innerText = data.message || data.error || "Unknown error.";
     });
   </script>
+<p><a herf="index.html">⬅ back to home</a></p>
 </body>
 </html>
+
