--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,8 @@
       document.getElementById("status").innerText = data.message || data.error || "Unknown error.";
     });
   </script>
-<p><a herf="index.html">⬅ back to home</a></p>
+<a herf="index.html">⬅ back to home</a>
 </body>
 </html>
+
 
